doc: Change UI text

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -14,9 +14,9 @@
       </div>
 
       <div id="container">
-        <p>
-          canvas内の任意の三点をクリックしてください。三角形の五心が表示されます。
-        </p>
+        <b style="font-size: 110%;">
+          canvas内の任意の三点をクリックしてください！三角形の五心が表示されます。
+        </b>
         <form>
           <h2>表示設定</h2>
           <div>
@@ -397,7 +397,7 @@
           </div>
         </form>
         <div id="hints">
-          <h2>基礎知識</h2>
+          <h2>定義</h2>
           <ul>
             <li>重心は、各辺の中線（頂点と辺の中点を結ぶ線）の交点である。</li>
             <li>外心は、各辺の垂直二等分線の交点である。</li>
@@ -406,6 +406,9 @@
             <li>
               傍心は、あるの角の二等分線と残り2つの角の外角の二等分線の交点である。
             </li>
+          </ul>
+          <h2>性質</h2>
+          <ul>
             <li>重心は、中線を２：１に分離する。</li>
             <li>直角三角形の外心は、常に一番長い辺の上に存在する。</li>
             <li>重心は常に三角形の内部に存在する。</li>
